--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
     <% end %>
 
     <title><%= yield(:page_title).present? ? yield(:page_title) : t("Meltem Reyhan") %></title>
-    <meta property="og:title" content="<%= yield(:page_title).present? ? yield(:page_title) : t("bigbluebutton") %>" />
+    <meta property="og:title" content="<%= yield(:page_title).present? ? yield(:page_title) : t("Meltem Reyhan") %>" />
     <meta property="og:type" content="Meltem Reyhan" />
     <meta property="og:description" content="<%= yield(:page_desc).present? ? yield(:page_desc) : t("landing.about", href: "Cananarman", locale: :en) %>" />
     <meta property="og:url" content="<%= request.base_url %>" />
